# FaustAlgebra

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TestAlgebra.cpp  TestAlgebra.hh  main.cpp
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
FaustAlgebra/: FaustAlgebra.hh
tlib/: errormsg.cpp  errormsg.hh  exception.hh  garbageable.cpp  garbageable.hh  list.cpp  list.hh  node.cpp  node.hh  occur.cpp  recursive-tree.cpp  shlysis.cpp  symbol.cpp  symbol.hh  tree.cpp  tree.hh
